--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
             <img src="images/Abrar9.jpg" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/Abrar.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Abrar Jawad is very excited about everything</h3>
+            <p>
+                Abrar Jawad is very excited about everything. Abrar Jawad Hossain is a little boy. When Abrar Javed sees
+                something, his enthusiasm for it increases. He kept asking one question after another. What is it, what
+                happens with it, why it happens, etc.
+            </p>
+            <a class="link-button" target="_blank" href="https://mdbelaluddin.com/">CLICK HERE</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
